# hitmixdmx

./: .gitignore  README.md  pyproject.toml  start-ui.command
documentation/: build-lighting-clips.md  lighting-app-plan.md
documentation/example_sets/: claude_lights_start.als  claude_lights_wip.als
documentation/example_sets/claude_lights_start Project/: claude_lights_start.als  claude_lights_wip.als
examples/: breathing_blue.json  four_on_floor_red.json  multi_clip_demo.json  pattern_showcase.json  rainbow_gradient.json
lightgen/: __init__.py  als_io.py  cli.py  events.py  fixtures.py  fixtures_extended.py  legacy_convert.py  llm.py  midi_to_dmx.py  patterns.py  renderer.py  spec.py  ui.py  visualizer.py
template/claude_lights_start Project/: claude_lights_start.als
tests/: test_llm.py  test_patterns.py  test_render.py  test_visualizer.py
