[project]
name = "lightgen"
version = "0.1.0"
description = "Generate Ableton Live (.als) clips that drive DMXIS lighting fixtures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
ui = [
    "gradio>=4.44",
]

[project.scripts]
lightgen = "lightgen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightgen"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
